--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://gopowertwo.github.io
-title: Georgi Zlatkov
+title: go2
 subtitle: The world as I see it.
-author: Georgi Zlatkov
+author: go2
 simple_search: http://google.com/search
 description:
 
